fixed CTA in covid banner so spacing did not overlap

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -29,3 +29,9 @@ header {
     .fs-20p { font-size: 16px; }
   }
 }
+
+@media (min-width: $container-width) {
+  p.black {
+    float: left;
+  }
+}
